--- a/quiz.html
+++ b/quiz.html
@@ -16,7 +16,14 @@
     <div class="contenedor">
 
     </div>
+
+    <div class="btn">¡REINICIAR!</div>
     
+    <!-- <footer class="footer-container">
+        <a href="https://www.linkedin.com/in/conrad-meyer-alten-rodr%C3%ADguez/" target="_blank"><img src="img/linkedin.png" alt="linkedin"></a>
+        <a href="https://github.com/ConradMeyer" target="_blank"><img src="img/github.png" alt="github"></a>
+        <p>Conrad Meyer-Alten Rodriguez - 2021</p>
+    </footer> -->
     <script src="js/main.js"></script>
 </body>
 </html>
