added changes on the welcome page

--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 
     <main class="contenedor">
 
-        <img src="https://media.tenor.com/images/2a6afb0fc543a8aafb23e5897e9100aa/tenor.gif" alt="Gif Quiz">
+        <img src="https://media1.tenor.com/images/c9b719083064d4e47ec9bd9dc5f1c169/tenor.gif?itemid=14683549" alt="Gif Quiz">
 
         <div>
             <h1>!Bienvenido al QUIZ de HARRY POTTER!</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora doloribus placeat recusandae dicta architecto beatae, saepe quisquam vitae numquam velit ex quas voluptates! Aperiam modi aliquid quos dolor, qui beatae?</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora doloribus placeat recusandae dicta architecto beatae!</p>
         </div>
 
         <a href="quiz.html">¡JUGAR!</a>
