added some changes

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/bienvenida.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Akaya+Kanadaka&display=swap" rel="stylesheet"> 
     <title>Bienvenida</title>
 </head>
 <body>
@@ -15,7 +17,7 @@
 
         <div>
             <h1>!Bienvenido al QUIZ de HARRY POTTER!</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora doloribus placeat recusandae dicta architecto beatae!</p>
+            <p>Demuestra todo lo que sabes sobre el mundo mágico y gána tu entrada en Hogwarts. ¡Pero dáte prisa! Solo tendrás 1 minuto para resolver todas las preguntas</p>
         </div>
 
         <a href="quiz.html">¡JUGAR!</a>
