--- a/quiz.html
+++ b/quiz.html
@@ -5,25 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Akaya+Kanadaka&display=swap" rel="stylesheet"> 
     <title>QUIZ</title>
 </head>
 <body>
 
-    <!-- <div class="contador">
+    <div class="contador">
         <span id="countdown"></span> <p>SEGUNDOS</p>
-    </div> -->
+    </div>
 
     <div class="contenedor">
 
     </div>
 
     <div class="btn">¡REINICIAR!</div>
+    <a class="btnInicio" href="index.html">INICIO</a>
+
     
-    <!-- <footer class="footer-container">
-        <a href="https://www.linkedin.com/in/conrad-meyer-alten-rodr%C3%ADguez/" target="_blank"><img src="img/linkedin.png" alt="linkedin"></a>
-        <a href="https://github.com/ConradMeyer" target="_blank"><img src="img/github.png" alt="github"></a>
-        <p>Conrad Meyer-Alten Rodriguez - 2021</p>
-    </footer> -->
     <script src="js/main.js"></script>
 </body>
 </html>
